--- a/mtaanimart/templates/navbar.html
+++ b/mtaanimart/templates/navbar.html
@@ -1,33 +1,27 @@
 <!-- navbar.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid"> <a class="navbar-brand" href="/">Mtaani Mart</a> <button class="navbar-toggler"
-            type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
-                class="navbar-toggler-icon"></span> </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page" href="/">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="/help/">Help</a> </li>
-            </ul>
-            <form class="d-flex" method="GET" action="/search/"> <input class="form-control me-2" type="search"
-                    placeholder="Search products" aria-label="Search" name="q"> <button class="btn btn-outline-success"
-                    type="submit">Search</button> </form>
-            <ul class="navbar-nav ms-3">
-                <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="accountDropdown"
-                        role="button" data-bs-toggle="dropdown" aria-expanded="false"> Account </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
-                        <li><a class="dropdown-item" href="/login/">Login</a></li>
-                        <li><a class="dropdown-item" href="/register/">Register</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/logout/">Logout</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"> <a class="nav-link position-relative" href="/cart/"> Cart <span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"> 0
-                            <span class="visually-hidden">items in cart</span> </span> </a> </li>
-            </ul>
-        </div>
+<nav class="navbar navbar-expand-lg bg-warning">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Mtaani Mart</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cart</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Offers</a>
+        </li>
+        </ul>
+        <ul class="navbar-nav">
+         <li class="nav-item">
+          <a class="nav-link bg-white rounded-5 px-3 py-2" href="{% url 'login' %}">Login</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
