--- a/mtaanimart/authApp/templates/authApp/login_form.html
+++ b/mtaanimart/authApp/templates/authApp/login_form.html
@@ -16,6 +16,7 @@
                 <input type="password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <a href="{% url 'register' %}" class="mx-2 text-warning text-decoration-none">No Account</a>
         </form>
     </form>
 </div>
