--- a/mtaanimart/authApp/templates/authApp/register_form.html
+++ b/mtaanimart/authApp/templates/authApp/register_form.html
@@ -1,6 +1,18 @@
 {% extends 'main.html'%}
 
 {% block content %}
+<div>
+    <form action="" method="POST"
+       {% csrf_token %} 
+       {{form.as_p}} 
+       <br>
+       <button type="submit" class="btn btn-primary">Register</button>
+       <a href="{% url 'login' %}" class="mx-2 text-warning text-decoration-none">Back to login</a>
 
+
+    </form>
+
+
+</div>
 
 {% endblock %}
