--- a/mtaanimart/authApp/templates/authApp/register_form.html
+++ b/mtaanimart/authApp/templates/authApp/register_form.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div>
-    <form action="" method="POST"
+    <form action="" method="POST">
        {% csrf_token %} 
        {{form.as_p}} 
-       <br>
+       
        <button type="submit" class="btn btn-primary">Register</button>
        <a href="{% url 'login' %}" class="mx-2 text-warning text-decoration-none">Back to login</a>
 
