--- a/mtaanimart/ProductApp/templates/ProductApp/home.html
+++ b/mtaanimart/ProductApp/templates/ProductApp/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 <style>
 .hero-section {
-    background-image: url("{% static 'images/mtaani-bg.jpg' %}");
+    background-image: url("{% static 'ProductApp/images/bg-mtaani.png' %}");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -19,21 +19,21 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
-    padding: 0 20px;
+    padding-top: 140px;
 }
 
 .hero-overlay h1 {
     font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .hero-overlay h5 {
     font-size: 1.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 </style>
 
