--- a/mtaanimart/ProductApp/templates/ProductApp/home.html
+++ b/mtaanimart/ProductApp/templates/ProductApp/home.html
@@ -39,9 +39,10 @@
 
 <div class="hero-section">
     <div class="hero-overlay">
-        <h1>Welcome to Mtaani Mart</h1>
-        <h5>Browse to view products</h5>
+        <h1 class="hero-title" >Welcome to Mtaani Mart</h1>
+        <h5 class="hero-subtitle">Your one stop shop for all products</h5>
         <a href="{% url 'product_list' %}" class="btn btn-primary btn-lg">View Products</a>
     </div>
 </div>
+
 {% endblock %}
