--- a/mtaanimart/ProductApp/static/ProductApp/css/style.css
+++ b/mtaanimart/ProductApp/static/ProductApp/css/style.css
@@ -50,3 +50,14 @@
   font-weight: 700;
   letter-spacing: 1px; /* subtle spacing for elegance */
 }
+.hero-title {
+    color: #6a0dad;   /* Mtaani Mart purple */
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.hero-subtitle {
+    color: #6a0dad;   /* Mtaani Mart purple */
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
