--- a/mtaanimart/templates/navbar.html
+++ b/mtaanimart/templates/navbar.html
@@ -24,6 +24,7 @@
                 <li class="nav-item me-3"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item me-3"><a class="nav-link" href="{% url 'product_list' %}">Products</a></li>
                 <li class="nav-item me-3"><a class="nav-link" href="{% url 'cart' %}">Cart</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'help' %}">Help</a></li>
 
 
 
