--- a/mtaanimart/ProductApp/templates/ProductApp/home.html
+++ b/mtaanimart/ProductApp/templates/ProductApp/home.html
@@ -11,7 +11,7 @@
     background-position: center;
     height: 100vh;
     position: relative;
-    color: white;
+    
 }
 
 .hero-overlay {
@@ -44,5 +44,8 @@
         <a href="{% url 'product_list' %}" class="btn btn-primary btn-lg">View Products</a>
     </div>
 </div>
+<footer style="background:#333; text-align:center; padding:15px; margin-top:40px;">
+  <p>&copy; 2025 Mtaani Mart. All rights reserved.</p>
+</footer>
 
 {% endblock %}
